Fixed pmd rules